--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,14 +1,13 @@
-AllCops:
-  NewCops: enable
-  Exclude:
-    - "db/**/*"
-    - "bin/*"
-    - "config/**/*"
-    - "Guardfile"
-    - "Rakefile"
-    - "node_modules/**/*"
+NewCops: enable
+Exclude:
+  - "db/**/*"
+  - "bin/*"
+  - "config/**/*"
+  - "Guardfile"
+  - "Rakefile"
+  - "node_modules/**/*"
 
-  DisplayCopNames: true
+DisplayCopNames: true
 
 Layout/LineLength:
   Max: 120
@@ -57,4 +56,18 @@ Style/HashEachMethods:
 Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
+  Enabled: false
+
+# Disable individual cops
+Metrics/CyclomaticComplexity:
+  Enabled: false
+Metrics/MethodLength:
+  Enabled: false
+Metrics/PerceivedComplexity:
+  Enabled: false
+Layout/LineLength:
+  Enabled: false
+Lint/EmptyWhen:
+  Enabled: false
+Lint/DuplicateCaseCondition:
   Enabled: false
